--- a/backend/task_management_springboot/src/main/resources/application.yml
+++ b/backend/task_management_springboot/src/main/resources/application.yml
@@ -1,18 +1,18 @@
 spring:
-    application:
-        name: task-management-springboot
-    datasource:
-        url: jdbc:mysql://192.168.1.65:3306/task_management_system_db?useSSL=false&serverTimezone=UTC
-        username: toan
-        password: ductoan0712
-        driver-class-name: com.mysql.cj.jdbc.Driver
-    jpa:
-        hibernate:
-            ddl-auto: update
-        show-sql: true
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.MySQL8Dialect
-                '[format_sql]': true
+  application:
+    name: task-management-springboot
+  datasource:
+    url: jdbc:mysql://192.168.1.82:3306/task_management_system_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: toan
+    password: ductoan0712
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+        "[format_sql]": true
 server:
-    port: 8080
+  port: 8080
